--- a/ASV.cabal
+++ b/ASV.cabal
@@ -127,12 +127,12 @@ test-suite ASV-test
   other-modules:       Spec.Parser.Types.Token
                      , Spec.Parser.Combinators.Lex
                      , Spec.Parser.Combinators.ReservedWords
+                     , Spec.Generators.LexElements
                      , Types
   --other-modules:       Lexer.Spec
   --                   , Lexer.Functions
   --                   , Lexer.SingleWords
   --                   , Lexer.Sentences
-  --                   , Generators.LexElements
   --                   , Parser.Spec
                      --, Generators.ParseElements
   build-depends:       base
@@ -146,6 +146,7 @@ test-suite ASV-test
                      --, mtl
                      --, transformers
                      , parsec
+                     , regex-compat
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
