Added bit string literal tests and fixes.
Fixes for bit string literals:
- Added try to " container bit string to stop absorbing characters for %
container bit strings
- Typo in hex bit string conversion to binary

--- a/ASV.cabal
+++ b/ASV.cabal
@@ -140,7 +140,7 @@ test-suite ASV-test
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
-                     --, containers
+                     , containers
                      --, split
                      , bytestring
                      --, mtl
