--- a/ASV.cabal
+++ b/ASV.cabal
@@ -92,17 +92,15 @@ library
                      --, Netlister.ParseTree
                      --, Netlister.Parse.Objects
   build-depends:       base >= 4.7 && < 5
-                     , array
-                     , split
+                     --, split
                      , bytestring
-                     , containers
+                     --, containers
                      , optparse-applicative
-                     , transformers
-                     , directory
+                     --, transformers
+                     --, directory
                      , mtl >= 2.2.2
-                     , bimap
-                     , filepath
-                     , text
+                     --, filepath
+                     --, text
                      , parsec
   build-tools:         alex
   default-language:    Haskell2010
