Updated abstract literal parsing.
Change to reflect new understanding of LRM (how abstract literals
correlate to int or real types).
Associated documentation updated.
Changed tests accordingly.
Incomplete form of decimals (real-kind) testing included.

--- a/ASV.cabal
+++ b/ASV.cabal
@@ -94,7 +94,7 @@ library
   build-depends:       base >= 4.7 && < 5
                      --, split
                      , bytestring
-                     --, containers
+                     , containers
                      , optparse-applicative
                      --, transformers
                      --, directory
