Removed some currently unused files.
These files are used for the parse tree (and depedencies of the tree).
Currently unused and are lowering Haddock coverage and increasing build
time.

--- a/ASV.cabal
+++ b/ASV.cabal
@@ -21,15 +21,15 @@ library
                      , Parser.Combinators.ReservedWords.Internal
                      , Parser.Types.Token
                      , Parser.Types.Token.Internal
-                     , Parser.Types.Tree
+                     --, Parser.Types.Tree
                      --, Parser.Functions.Tree
 
   --exposed-modules:     Lexer.Lexer
-                     , Lexer.Alex.Types
+                     --, Lexer.Alex.Types
                      --, Lexer.Alex.Functions
-                     , Lexer.Types.Token
+                     --, Lexer.Types.Token
                      --, Lexer.Types.Monad
-                     , Lexer.Types.PositionWrapper
+                     --, Lexer.Types.PositionWrapper
                      --, Lexer.Types.Error
                      --, Lexer.Functions.Lex
                      --, Lexer.Functions.PositionWrapper
