Attempted fix for GitHub pages release.

--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ deploy:
    provider: pages
    skip-cleanup: true
    github-token: $GITHUB_TOKEN
-   local-dir: stack path --local-doc-root
+   local-dir: $(stack path --local-doc-root)
    on:
       branch: feature/parser/refactor
 
