--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ addons:
   apt:
     packages:
       - libgmp-dev
-      - coreutils
+      - realpath
 
 # Before installation
 # For installing additional dependencies required for the project
