Only deploy on master branch.

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,4 @@ deploy:
    github-token: $GITHUB_TOKEN
    local-dir: $(./scripts/deploy.py)
    on:
-      branch: feature/parser/refactor
-
-#   on:
-#      branch: master
+      branch: master
