Added coverage run to test command.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
 # Run the build script
 script:
 # Build the package, its tests, and its docs and run the tests
-- stack --no-terminal test --haddock --no-haddock-deps
+- stack --no-terminal test --haddock --no-haddock-deps --coverage
 
 # Get coverage for Coveralls
 after_script:
