--- a/ASV.cabal
+++ b/ASV.cabal
@@ -102,7 +102,7 @@ library
                      --, filepath
                      --, text
                      , parsec
-  build-tools:         alex
+  --build-tools:         alex
   default-language:    Haskell2010
 
 --executable asv
