Second attempt to test issue #54.
Commenting out branch restriction didn't run deployment.
Changed branch to current refactor to test.

--- a/.travis.yml
+++ b/.travis.yml
@@ -48,5 +48,5 @@ deploy:
    skip-cleanup: true
    github-token: $GITHUB_TOKEN
    local-dir: $(./scripts/deploy.py)
-   #   on:
-   #      branch: master
+   on:
+      branch: feature/parser/refactor
