Completion of new improved deployment method.
Testing complete, shown to work (see related issue).
Closes #54.

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,4 +49,4 @@ deploy:
    github-token: $GITHUB_TOKEN
    local-dir: $(./scripts/deploy.py)
    on:
-      branch: feature/parser/refactor
+      branch: master
